adjusting survey view to prevent horizontal scroll happening at smaller full screen

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -580,7 +580,7 @@ input[type="range"]::-webkit-slider-thumb {
 #survey-panel {
     display: flex;
     flex-direction: column;
-    width: 60vw;
+    width: 65vw;
     padding: var(--padding);
     margin: auto;
     box-sizing: border-box;
